fix: flexwrap

--- a/src/routes/another.css
+++ b/src/routes/another.css
@@ -1,3 +1,6 @@
 code span {
   display: inline;
 }
+.bx--row {
+  flex-wrap: nowrap;
+}
